@@ -16,9 +16,10 @@
 #ifndef HW_FEATURES_H
 #define HW_FEATURES_H
 
-#define HOSTAPD_CHAN_W_SCAN 0x00000001
-#define HOSTAPD_CHAN_W_ACTIVE_SCAN 0x00000002
-#define HOSTAPD_CHAN_W_IBSS 0x00000004
+#define HOSTAPD_CHAN_DISABLED 0x00000001
+#define HOSTAPD_CHAN_PASSIVE_SCAN 0x00000002
+#define HOSTAPD_CHAN_NO_IBSS 0x00000004
+#define HOSTAPD_CHAN_RADAR 0x00000008
 
 struct hostapd_channel_data {
 	short chan; /* channel number (IEEE 802.11) */
